fixed form margin on mobile

--- a/styles.css
+++ b/styles.css
@@ -175,4 +175,15 @@ footer {
     img {
         width:100%;
     }
+
+    .sliderContent {
+        width:100%;
+    margin-left:0px;
+    z-index:2;
+    transition: all 0.5s;
+    background-color:#fff;
+    padding:20px;
+    border-radius:5px;
+    
+    }
 }
